--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5203782975443424"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анализ Безопасности Дорожного Движения</title>
@@ -95,6 +97,18 @@
                 margin-bottom: 15px; /* Добавленный нижний отступ для промежутка */
             }
         }
+        @media (max-width: 768px) {
+    .blog-container {
+        grid-template-columns: repeat(2, 1fr); /* 2 columns for tablets */
+    }
+}
+
+@media (max-width: 480px) {
+    .blog-container {
+        grid-template-columns: 1fr; /* 1 column for phones */
+    }
+}
+
     </style>
 </head>
 <body>
