--- a/blog11.html
+++ b/blog11.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5203782975443424"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-5203782975443424">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение Водителей Грузовиков: Важность Профессиональной Подготовки</title>
