--- a/blog1.html
+++ b/blog1.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5203782975443424"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-5203782975443424">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Понимание Столкновений Грузовиков</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
